# onvif_server_emulator

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  ConsoleLogger.h  HttpServerFwd.h  Logger.h  Logger.hpp  LoggerFactories.h  README.md  RtspServer.cpp  RtspServer.h  Server.cpp  Server.h  Slave.cpp  Slave.h  Types.inl  build_VS2017_x64.bat  build_VS2019_x64.bat  build_x64.bat  environment setup (guide).md  main.cpp
gui_configurator/: main.py  user_configs.py
include/: ConsoleLogger.h  FileLogger.h  IOnvifServer.h  LoggerFactories.h  MediaFormats.h  StreamLogger.h
include/onvif_services/: service_configs.h
onvif/: OnvifRequest.h  Recording.cpp  Recording.h
onvif_services/: IOnvifService.cpp  IOnvifService.h  analytics_service.cpp  analytics_service.h  device_service.cpp  device_service.h  deviceio_service.cpp  deviceio_service.h  discovery_service.cpp  discovery_service.h  event_service.cpp  event_service.h  imaging_service.cpp  imaging_service.h  media2_service.cpp  media2_service.h  media_service.cpp  media_service.h  ptz_service.cpp  ptz_service.h  pull_point.cpp  pull_point.h  recording_search_service.cpp  recording_search_service.h  replay_control_service.cpp  replay_control_service.h
onvif_services/physical_components/: IDigitalInput.cpp  IDigitalInput.h  IPhysicalComponent.h
onvif_services/pullpoint/: event_generators.cpp  event_generators.h  pull_point.cpp  pull_point.h
server_configs/: DeviceIO.config  Recording Search.config  Replay Control.config  analytics.config  common.config  device.config  discovery.config  event.config  imaging.config  io_sources.config  media.config  media2.config  media_profiles.config  ptz.config
server_configs/discovery_service_responses/: probe_match.responses
server_configs/responses/: GetEventProperties.response  ProbeMatch.response
src/: IOnvifServer.cpp
src/onvif_services/: service_configs.cpp
third/http_parser/: version.txt
unit_tests/: CMakeLists.txt  analytics_configuration_reader_test.cpp  audio_source_tests.cpp  auth_tests.cpp  date_time_tests.cpp  device_service_tests.cpp  discovery_tests.cpp  event_service_tests.cpp  http_da_tests.cpp  media2_tests.cpp  mediaprofiles_manager_tests.cpp  pull_point_tests.cpp  recording_tests.cpp  server_tests.cpp  service_configs_tests.cpp  tests_main.cpp  video_source_tests.cpp  xmlparser_tests.cpp
unit_tests/test_data/: discovery_service_test.responses  media2_service_test.config  mediaprofiles_manager_test.config  system_users_list_test.config
utility/: AnalyticsReader.cpp  AnalyticsReader.h  AudioSourceReader.cpp  AudioSourceReader.h  AuthHelper.cpp  AuthHelper.h  DateTime.hpp  EventService.cpp  EventService.h  HttpDigestHelper.cpp  HttpDigestHelper.h  HttpHelper.cpp  HttpHelper.h  MediaProfilesManager.cpp  MediaProfilesManager.h  PtzConfigurationReader.cpp  PtzConfigurationReader.h  SoapHelper.cpp  SoapHelper.h  VideoSourceReader.cpp  VideoSourceReader.h  XmlParser.cpp  XmlParser.h
